# embedded-scheduler

./: CMakeLists.txt  LICENSE
.github/workflows/: ci.yml
Tests/: SchedulerTests.cpp
include/scheduler/: scheduler.hpp
